correccion de pantallas

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/index.xhtml
@@ -45,7 +45,7 @@
                     </p:column>
                     <p:column headerText="Acciones">
                         <p:commandLink action="#{catGradoController.mostrar(car)}" >
-                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Ver grado"></i>
+                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Consultar grado"></i>
                         </p:commandLink>
                         <p:commandLink action="#{catGradoController.modificar(car)}">
                             <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar grado"></i>
