--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/index.xhtml
@@ -51,7 +51,7 @@
                     </p:column>
                     <p:column headerText="Acciones">
                         <p:commandLink action="#{catSeccionController.mostrar(sec)}" >
-                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Ver Seccion"></i>
+                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Consultar Seccion"></i>
                         </p:commandLink>
                         <p:commandLink action="#{catSeccionController.modificar(sec)}">
                             <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Seccion"></i>
