--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/tipoElemPlantilla/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/tipoElemPlantilla/index.xhtml
@@ -42,7 +42,7 @@
                     </p:column>
                     <p:column headerText="Acciones">
                         <p:commandLink action="#{catTipoElementoPlantillaController.mostrar(car)}" >
-                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Ver Tipo de elemento de plantilla"></i>
+                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Consultar Tipo de elemento de plantilla"></i>
                         </p:commandLink>
                         <p:commandLink action="#{catTipoElementoPlantillaController.modificar(car)}">
                             <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Tipo de elemento de plantilla"></i>
