--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/index.xhtml
@@ -44,7 +44,7 @@
                     </p:column>
                     <p:column headerText="Acciones">
                         <p:commandLink action="#{gestionArchivoMultimediaController.mostrar(car)}" >
-                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Ver Archivo Multimedia"></i>
+                            <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Consultar Archivo Multimedia"></i>
                         </p:commandLink>
                         <p:commandLink action="#{gestionArchivoMultimediaController.modificar(car)}">
                             <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Archivo Multimedia"></i>
