--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/ver.xhtml
@@ -10,7 +10,7 @@
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Administración de Sistema" url="#"/>
             <p:menuitem value="Mantenimiento de Archivos multimedia" url="#{siteUrls.gestionArchivosMultimedia}"/>
-            <p:menuitem value="Ver Archivo Multimedia" url="#"/>
+            <p:menuitem value="Consultar Archivo Multimedia" url="#"/>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
