--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionEvaluaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionEvaluaciones/index.xhtml
@@ -45,7 +45,7 @@
                             #{formatoPantallas.numero3}
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-list Fs25 Red MarRight10" style="cursor: pointer" title="Ver Evaluación"></i>
+                            <i class="icon-list Fs25 Red MarRight10" style="cursor: pointer" title="Consultar Evaluación"></i>
                             <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Evaluación"></i>
                             <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Evaluación"></i>
                         </p:column>
@@ -81,7 +81,7 @@
                         <p:spinner  value="#{formatoPantallas.numero2}"></p:spinner>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Ver Nota al finalizar evaluación: " class="Contanier10 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Consultar Nota al finalizar evaluación: " class="Contanier10 Responsive"></p:outputLabel>
                         <p:inputSwitch onLabel="#{formatoPantallas.campo2}" offLabel="#{formatoPantallas.campo2}"></p:inputSwitch>
                         <p:outputLabel  value="Total de preguntas de la evaluación: " class="Contanier10 Responsive"></p:outputLabel>
                         <p:spinner  value="#{formatoPantallas.numero3}"></p:spinner>
@@ -89,7 +89,7 @@
                         <p:inputSwitch onLabel="#{formatoPantallas.campo2}" offLabel="#{formatoPantallas.campo2}"></p:inputSwitch>
                         <p:outputLabel value="Respuestas aleatorias: " class="Contanier10 Responsive"></p:outputLabel>
                         <p:inputSwitch onLabel="#{formatoPantallas.campo2}" offLabel="#{formatoPantallas.campo2}"></p:inputSwitch>
-                        <p:outputLabel  value="Ver respuestas al final: " class="Contanier10 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Consultar respuestas al final: " class="Contanier10 Responsive"></p:outputLabel>
                         <p:inputSwitch onLabel="#{formatoPantallas.campo2}" offLabel="#{formatoPantallas.campo2}"></p:inputSwitch>
                         <p:outputLabel value="Tipo de ponderación: "></p:outputLabel>
                         <p:selectOneMenu >
@@ -141,7 +141,7 @@
                         <p:spinner  value="#{formatoPantallas.numero2}"></p:spinner>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Ver Nota al finalizar evaluación: " class="Contanier10 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Consultar Nota al finalizar evaluación: " class="Contanier10 Responsive"></p:outputLabel>
                         <p:inputSwitch onLabel="#{formatoPantallas.campo2}" offLabel="#{formatoPantallas.campo2}"></p:inputSwitch>
                         <p:outputLabel  value="Total de preguntas de la evaluación: " class="Contanier10 Responsive"></p:outputLabel>
                         <p:spinner  value="#{formatoPantallas.numero3}"></p:spinner>
@@ -149,7 +149,7 @@
                         <p:inputSwitch onLabel="#{formatoPantallas.campo2}" offLabel="#{formatoPantallas.campo2}"></p:inputSwitch>
                         <p:outputLabel value="Respuestas aleatorias: " class="Contanier10 Responsive"></p:outputLabel>
                         <p:inputSwitch onLabel="#{formatoPantallas.campo2}" offLabel="#{formatoPantallas.campo2}"></p:inputSwitch>
-                        <p:outputLabel  value="Ver respuestas al final: " class="Contanier10 Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Consultar respuestas al final: " class="Contanier10 Responsive"></p:outputLabel>
                         <p:inputSwitch onLabel="#{formatoPantallas.campo2}" offLabel="#{formatoPantallas.campo2}"></p:inputSwitch>
                         <p:outputLabel value="Tipo de ponderación: "></p:outputLabel>
                         <p:selectOneMenu >
