--- a/SIENI/SIENI-web/src/main/webapp/view/formato/portalConsultas/gestionConsultas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/portalConsultas/gestionConsultas/index.xhtml
@@ -38,7 +38,7 @@
                             #{formatoPantallas.campo100}
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-chat75 Fs25 Red MarRight10" style="cursor: pointer" title="Ver Consulta"></i>
+                            <i class="icon-chat75 Fs25 Red MarRight10" style="cursor: pointer" title="Consultar Consulta"></i>
                             <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Consulta"></i>
                         </p:column>
                     </p:dataTable>
@@ -100,7 +100,7 @@
                     </div>
                 </h:form>
             </p:tab>
-            <p:tab title="Ver Consulta">
+            <p:tab title="Consultar Consulta">
                 <h:form>
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda" width="400" maximizable="true">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
