--- a/SIENI/SIENI-web/src/main/webapp/view/formato/portalNoticias/gestionNoticias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/portalNoticias/gestionNoticias/index.xhtml
@@ -140,7 +140,7 @@
                 </h:form>
             </p:tab>
 
-            <p:tab title="Ver Noticias">
+            <p:tab title="Consultar Noticias">
                 <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda" width="400" maximizable="true">
                     <p:outputLabel value="Esta ayuda sirve un monton"/>
                 </p:dialog>
