--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/MntoAnioEscolar/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/MntoAnioEscolar/index.xhtml
@@ -49,7 +49,7 @@
                     </p:column>
                     <p:column headerText="Acciones">                    
                         <p:commandLink action="#{gestionarAnioEscolarController.ver(car)}" >
-                            <i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Año Escolar" ></i>
+                            <i class="icon-visibility1 Fs30 Red MarRight10" title="Consultar Año Escolar" ></i>
                         </p:commandLink>
                         <p:commandLink action="#{gestionarAnioEscolarController.modificar(car)}"  >
                             <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Año escolar"></i>
