--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/ver.xhtml
@@ -30,6 +30,8 @@
                 <p:panelGrid columns="4" class="Container100 Responsive" id="p1">
                     <p:outputLabel  value="Nombre del Curso:  " class=" Responsive"></p:outputLabel>
                     <p:outputLabel value="#{gestionCursoController.cursoModifica.crNombre}"/>
+                    <p:outputLabel value="Tipo de Curso: "></p:outputLabel>
+                    <p:outputLabel value="#{gestionCursoController.cursoModifica.crTipoCurso}"></p:outputLabel>
                     <p:outputLabel value="Capacidad: "></p:outputLabel>
                     <p:outputLabel value="#{gestionCursoController.cursoModifica.crCapacidad}"></p:outputLabel>
                     <p:outputLabel value="Docente: "></p:outputLabel>
