--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/indexItems.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/indexItems.xhtml
@@ -56,7 +56,7 @@
                         #{car.eiPonderacion}
                     </p:column>
                     <p:column headerText="Acciones" style="width: 12%">
-                        <!--<p:commandLink ><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Item" ></i></p:commandLink>-->
+                        <!--<p:commandLink ><i class="icon-visibility1 Fs30 Red MarRight10" title="Consultar Item" ></i></p:commandLink>-->
                         <p:commandLink action="#{gestionarEvaluacionController.modificarItem(car)}"><i class="icon-compose Fs25 Red MarRight10" title="Modificar Item" ></i></p:commandLink>
                         <p:commandLink action="#{gestionarEvaluacionController.gestionarItemsResp(car)}" ><i class="icon-portfolio Fs25 Red MarRight10" title="Agregar Respuestas" ></i></p:commandLink>
 <!--                        <p:commandLink  onclick="PF('dlgEliminar').show();" immediate="true" >
