--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/indexRespuesta.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/indexRespuesta.xhtml
@@ -50,7 +50,7 @@
                         #{car.erRespCorrecta}
                     </p:column>
                     <p:column headerText="Acciones" style="width: 12%">
-                        <!--<p:commandLink ><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Item" ></i></p:commandLink>-->
+                        <!--<p:commandLink ><i class="icon-visibility1 Fs30 Red MarRight10" title="Consultar Item" ></i></p:commandLink>-->
                         <p:commandLink action="#{gestionarEvaluacionController.modificarResp(car)}"><i class="icon-compose Fs25 Red MarRight10" title="Modificar Respuesta" ></i></p:commandLink>
 <!--                        <p:commandLink  ><i class="icon-portfolio Fs25 Red MarRight10" title="Agregar respuestas" ></i></p:commandLink>-->
                         <p:commandLink  onclick="PF('dlgEliminar').show();" immediate="true" >
