--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionNotas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionNotas/index.xhtml
@@ -58,7 +58,7 @@
                         #{car.tipoIngreso}
                     </p:column>
                     <p:column headerText="Acciones">
-                        <p:commandLink action="#{gestionNotaController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Nota" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionNotaController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Consultar Nota" ></i></p:commandLink>
                         <p:commandLink action="#{gestionNotaController.modificar(car)}" rendered="#{loginController.mostrarA('1,2')}">
                             <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Nota"></i>
                         </p:commandLink>
