--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/index.xhtml
@@ -46,7 +46,7 @@
                         #{car.idSeccion.scDescripcion}
                     </p:column>
                     <p:column headerText="Acciones">
-                        <p:commandLink action="#{gestionMatriculaController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Matricula" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionMatriculaController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Consultar Matricula" ></i></p:commandLink>
                         <p:commandLink action="#{gestionMatriculaController.modificar(car)}" >
                             <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Matrícula"></i>
                         </p:commandLink>
