--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/index.xhtml
@@ -53,7 +53,7 @@
                         </p:column>
                         
                     <p:column headerText="Acciones" style="width: 12%">
-                        <p:commandLink action="#{gestionarConsultasController.ver(consulta)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Noticia" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionarConsultasController.ver(consulta)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Consultar Noticia" ></i></p:commandLink>
                         <p:commandLink action="#{gestionarConsultasController.modificar(consulta)}"><i class="icon-compose Fs25 Red MarRight10" title="Modificar Noticia" ></i></p:commandLink>
                         <p:commandLink action="#{gestionarConsultasController.eliminar(consulta)}" onclick="PF('dlgEliminar').show();" immediate="true" >
                             <i class="icon-close Fs25 Red MarRight10" title="Eliminar Noticia"></i>
