--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/programacionClase/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/programacionClase/index.xhtml
@@ -55,7 +55,7 @@
                     #{car.estado}
                 </p:column>
                 <p:column headerText="Acciones">
-                    <p:commandLink action="#{programacionClasesController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver programación" ></i></p:commandLink>
+                    <p:commandLink action="#{programacionClasesController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Consultar programación" ></i></p:commandLink>
                     <p:commandLink action="#{programacionClasesController.modificar(car)}" rendered="#{loginController.mostrarA('1,2')}"><i class="icon-compose Fs25 Red MarRight10" title="Modificar Programación" ></i></p:commandLink>
                     <p:commandLink action="#{programacionClasesController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true"  rendered="#{loginController.mostrarA('1,2')}" >
                         <i class="icon-close Fs25 Red MarRight10" title="Eliminar Expediente"></i>
