--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
@@ -53,7 +53,7 @@
                     </p:column>
                     <p:column headerText="Acciones">
 
-                        <p:commandLink action="#{gestionarDocentesController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Expediente" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionarDocentesController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Consultar Expediente" ></i></p:commandLink>
                         <p:commandLink action="#{gestionarDocentesController.modificar(car)}" ><i class="icon-compose Fs25 Red MarRight10" title="Modificar Expediente" ></i></p:commandLink>
                         <p:commandLink action="#{gestionarDocentesController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
                             <i class="icon-close Fs25 Red MarRight10" title="Eliminar Expediente"></i>
